@@ -6,7 +6,7 @@ TODO for 0.25
 - Dynamic stroke dialog (Mostly done - needs unit cleanup)
 - Replace static fill dialog with dynamic one (Mostly done)
 - Fix stack order undo (DONE)
-- Pen tool (Almost done)
+- Pen tool (DONE)
 - Tool options (1/2 DONE)
 - Fix style/font mess (1 day)
 - Miscellaneous cleanups (5 days)
