@@ -7,15 +7,14 @@ static const char preferences_skeleton[] =
 "                 stroke:#000000;stroke-opacity:1;stroke-width:1px;stroke-linejoin:miter;stroke-linecap:butt;\">\n"
 "    <style id=\"shape\" style=\"stroke:none\">\n"
 "      <style id=\"rect\"/>\n"
-"      <style id=\"ellipse\"/>\n"
-"      <style id=\"star\"/>\n"
 "      <style id=\"arc\"/>\n"
+"      <style id=\"star\"/>\n"
 "      <style id=\"spiral\"/>\n"
 "    </style>\n"
 "    <style id=\"freehand\" style=\"fill:none;\"/>\n"
 "    <style id=\"calligraphic\" style=\"stroke:none;fill-rule:nonzero;\"/>\n"
 "    <style id=\"text\""
-"           style=\"fill:#000000;stroke:none;font-family:helvetica;font-style:normal;font-weight:normal;font-size:12px\"/>"
+"           style=\"fill:#000000;stroke:none;font-family:helvetica;font-style:normal;font-weight:normal;font-size:12px;\"/>"
 "  </style>\n"
 "  <interface id=\"toolboxes\">\n"
 "    <interface id=\"file\" state=\"1\"/>\n"
