@@ -1,5 +1,17 @@
 2002-08-25  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/text-context.c (sp_text_context_finalize): Do not use desktop here
+	(sp_text_context_finish): Implement, release desktop stuff here
+
+	* src/sp-text.c (sp_text_normalized_bpath): New method
+	(sp_text_print): Implement, still needs SPChars method
+
+	* src/sp-chars.c (sp_chars_normalized_bpath): New method
+
+	* src/path-chemistry.c (sp_selected_path_to_curves): Convert the new text object
+
+	* src/interface.c (sp_ui_file_menu): Use helpers, the right export dialog
+
 	* src/draw-context.c (sp_pen_context_finish): Flush object
 	(sp_pen_context_root_handler): Added 'BackSpace', should work OK now
 
